2001-03-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* coop-threads.c (scm_call_with_new_thread), load.c
	(scm_primitive_load, scm_sys_search_load_path), random.c
	(scm_c_default_rstate), struct.c (scm_make_struct_layout,
	scm_struct_ref, scm_struct_set_x):  Don't use SCM_ASSERT to
	(potentially) issue a scm-misc-error or wrong-num-args error
	message.

	* load.c (scm_search_path):  Use SCM_ASSERT_TYPE to give details
	about the expected type with the wrong-type-arg error message.

	* smob.c (scm_make_smob):  Abort on misuse of smob - it indicates
	a C level bug that can't be fixed from scheme anyway.

2001-03-05  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* eval.c (scm_m_letstar): Removed check for duplicate bindings.
	Duplicate bindings are OK in a let* since a let* is semantically
	equivalent to a nested set of let:s.

2001-03-05  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* print.c (scm_print_options): Fixed texinfo in docstring.

	* net_db.c (scm_getserv, scm_getproto, scm_getnet): Return #f if
	the underlying functions getservent, getprotoent or getnetent
	return NULL instead of signalling an error.

2001-03-04  Gary Houston  <ghouston@arglist.com>

	* socket.c (scm_fill_sockaddr): don't allow buffer overflows when
	taking an unexpectedly large filename for an AF_UNIX socket from
	bind/connect/sendto (thanks to Martin Grabmueller).
	
	* socket.c (scm_sock_fd_to_port, SCM_SOCK_FD_TO_PORT): removed the
	former and adjusted the latter.
	(scm_socket, scm_socketpair): cosmetic changes.
	(scm_getsockopt, scm_setsockopt): declare optlen as int, not
	size_t as socklen_t substitute.  don't restrict args/return values
	to INUM: allow full range of int or size_t.
	(scm_fill_sockaddr): check arguments before allocating memory, to
	avoid leakage.  use malloc, not scm_must_malloc.
	(scm_connect, scm_bind, scm_sendto): use int, not size_t as socklen_t
	substitute.  free the sockaddr structure before throwing an error.